--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 input:focus {
   outline-width: 0;
 }
+
+input {
+  --tw-ring-shadow: 0 0 #000 !important;
+}
