--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,18 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
+.fadeIn {
+  animation: fadeInAnimation ease 0.5s;
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
