--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,7 @@ body {
   background: linear-gradient(to bottom,
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  font-size: 18px;
 }
 
 @layer utilities {
